# docling-cli

./: .gitignore  README.md  pyproject.toml
src/doc_converter/: cli.py  core.py  formats.py
